个人中心排版自动化适配；实装根据课程有无通过将其分配至不同板块的功能

--- a/web/assets/libs/flot/Makefile
+++ b/web/assets/libs/flot/Makefile
@@ -2,7 +2,7 @@
 
 .PHONY: all
 
-# we cheat and process all .js files instead of an exhaustive courseList
+# we cheat and process all .js files instead of an exhaustive courseList_ongoing
 all: $(patsubst %.js,%.min.js,$(filter-out %.min.js,$(wildcard *.js)))
 
 %.min.js: %.js
